--- a/auth_api/python/Dockerfile
+++ b/auth_api/python/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3-alpine
+FROM python3:3-alpine
+
+RUN apk add --no-cache python3-dev \
+    && pip3 install --upgrade pip
 
 # Add your instructions to dockerize the application
 # App must run on port 8000
