Final update with challenge completed

--- a/auth_api/python/Dockerfile
+++ b/auth_api/python/Dockerfile
@@ -1,7 +1,12 @@
-FROM python3:3-alpine
+FROM python:3.10
 
-RUN apk add --no-cache python3-dev \
-    && pip3 install --upgrade pip
+RUN pip3 install --upgrade pip
+
+ADD . .
+
+RUN pip3 --no-cache-dir install -r requirements.txt
+
+CMD [ "python", "./api.py" ]
 
 # Add your instructions to dockerize the application
 # App must run on port 8000
